# libretrofuzz

./: .pre-commit-config.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: libretrofuzz.yml
libretrofuzz/: __main__.py  libretrofuzz.py
tests/: test_libretrofuzz.py
